# rs-w3r

./: Cargo.toml  Cross.toml  README.md  compile.sh
.github/workflows/: workflow.yml
sample/: config.toml
src/: client.rs  main.rs
